<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wheeled_humanoid_py</name>
  <version>0.0.0</version>
  <description>Python bindings for the wheeled_humanoid package</description>

  <maintainer email="khaled.jalloul@hotmail.com">Khaled Jalloul</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>pybind11-dev</depend>
  <depend>wheeled_humanoid</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>