<?xml version="1.0"?>
<package format="3">
  <name>robot_launcher</name>
  <version>0.0.0</version>
  <description>Robot launcher to start all ROS nodes.</description>

  <maintainer email="khaled.jalloul@hotmail.com">Khaled Jalloul</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>arm_controller</exec_depend>
  <exec_depend>robot_description</exec_depend>
  <exec_depend>state_machine</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>