<?xml version="1.0"?>
<package format="3">
  <name>state_machine</name>
  <version>0.0.0</version>
  <description>State machine for the wheeled humanoid</description>

  <maintainer email="khaled.jalloul@hotmail.com">Khaled Jalloul</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>arm_controller</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>wheeled_humanoid_msgs</depend>

  <exec_depend>robot_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>