<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wheeled_humanoid</name>
  <version>0.0.0</version>
  <description>Main wheeled humanoid package containing all ROS-independent robot logic</description>

  <maintainer email="khaled.jalloul@hotmail.com">Khaled Jalloul</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>Eigen3</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>