<?xml version="1.0"?>
<package format="3">
  <name>wheeled_humanoid_msgs</name>
  <version>0.0.0</version>
  <description>ROS 2 messages for the wheeled humanoid</description>

  <maintainer email="khaled.jalloul@hotmail.com">Khaled Jalloul</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>